2007-09-05  Ville Vainio  <vivainio@gmail.com>

	* external/mglob.py: expand('dirname') => ['dirname'], instead
	of ['dirname/foo','dirname/bar', ...].
        
	* Extensions/ipy_fsops.py: added, has usefull shell utils for plain
	win32 installations: icp, imv, imkdir, igrep, collect (collect
	is useful for others as well).

	* iplib.py: on callable aliases (as opposed to old style aliases),
	do var_expand() immediately, and use make_quoted_expr instead
	of hardcoded r"""
        
2007-09-04  Ville Vainio  <vivainio@gmail.com>

	* ipy_profile_zope.py: add zope profile, by Stefan Eletzhofer.
	Relicensed under BSD with the authors approval.
        
	* ipmaker.py, usage.py: Remove %magic from default banner, improve
	%quickref        

2007-09-03  Ville Vainio  <vivainio@gmail.com>

	* Magic.py: %time now passes expression through prefilter,
	allowing IPython syntax.

2007-09-01  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: Always show full traceback when newstyle config fails

2007-08-27  Ville Vainio  <vivainio@gmail.com>

	* Magic.py: fix %cd for nonexistent dir when dhist is empty, close #180

2007-08-26  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: Command line args have the highest priority again
	
	* iplib.py, ipmaker.py: -i command line argument now behaves as in
	normal python, i.e. leaves the IPython session running after -c
	command or running a batch file from command line.
    
2007-08-22  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: no extra empty (last) line in raw hist w/ multiline
	statements
	
	* logger.py: Fix bug where blank lines in history were not
	added until AFTER adding the current line; translated and raw
	history should finally be in sync with prompt now.
	
	* ipy_completers.py: quick_completer now makes it easy to create
	trivial custom completers
	
	* clearcmd.py: shadow history compression & erasing, fixed input hist
	clearing.
	
	* envpersist.py, history.py: %env (sh profile only), %hist completers
	